fixed text alignment

--- a/assets/css/posts.css
+++ b/assets/css/posts.css
@@ -1,16 +1,29 @@
 .title-header{
     text-align: center;
+    margin-bottom: 0;
 }
 
 .main-content{
     margin: auto;
-    text-align: center;
-    width: 80%;
+    width: 60%;
 }
 
 .post-image {
     max-width: 500px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.image-container{
+    text-align:center;
+}
+
+.text-container{
+    text-align: left;
+}
+
+.date-container{
+    margin-top:0;
     text-align: center;
+    margin-bottom: 10px;
 }
